==> barbossa-yang/NewBoardDTU/Src/EC20.c <==
#define __EC20_H__
#include "EC20.h"
#include "string.h"
#include "stdlib.h"
#include "stm32f1xx_hal.h"
#include "stm32f1xx_hal_usart.h"
#include "cmsis_os.h"
#include "usart.h"

void Ec20Reset(void)
{
		HAL_GPIO_WritePin(GPIOA, GPIO_PIN_0, GPIO_PIN_RESET);
		osDelay(5);
		HAL_GPIO_WritePin(GPIOA, GPIO_PIN_0, GPIO_PIN_SET);
		osDelay(400);
		HAL_GPIO_WritePin(GPIOA, GPIO_PIN_0, GPIO_PIN_RESET);
}

void  EC20_Init(void)
{
		CheckWhetherReturnOK();
		printf("ATE0\r\n"); //关闭回显
		osDelay(50);
		Clear_Buffer();	
		printf("AT+CSQ\r\n"); //检查CSQ
		osDelay(50);
		Clear_Buffer();
		printf("ATI\r\n"); //检查模块的版本号
		osDelay(50);
		Clear_Buffer();	
		CheckSIM();
//		CheckGSMInternet();
//		CheckGPRSInternet();
		printf("AT+COPS?\r\n");//查看注册到哪个运营商，支持移动,联通，电信
		osDelay(50);
		Clear_Buffer();
		printf("AT+QICLOSE=0\r\n");//关闭socket连接
    osDelay(50);
		Clear_Buffer();
		AccessAPN();
		printf("AT+QICSGP=1\r\n");
		osDelay(50);
		Clear_Buffer();
		DeactivationSystem();
		ActivationSystem();
}

void EC20Send_StrData(char *bufferdata)
{
		uint8_t untildata = 0xff;
	
		printf("AT+QISEND=0\r\n");
		osDelay(10);
		SendDateDone(bufferdata);
    Clear_Buffer();
    printf("AT+QISEND=0,0\r\n");
    osDelay(5);
    strx=strstr((char*)usart2_rx_buf,(char*)"+QISEND:");//发送剩余字节数据
    while(untildata)
    {
				printf("AT+QISEND=0,0\r\n");
				osDelay(20);
				strx=strstr((char*)usart2_rx_buf,(char*)"+QISEND:");//发送剩余字节数据
				strx=strstr((char*)strx,(char*)",");//获取第一个
				strx=strstr((char*)(strx+1),(char*)",");//获取第二个
				untildata=*(strx+1)-0x30;
				Clear_Buffer();
				HAL_UART_Receive_DMA(&huart2, usart2_rx_buf, USART_MAX_DATA_LEN);
    }
    Clear_Buffer();
}

void EC20Send_HexData(char *bufferdata)
{
    uint8_t untildata = 0xff;
		g_fix_data[0] = 0x1a;
    printf("AT+QISENDEX=0,\042%s\042\r\n",bufferdata);
    osDelay(100);
    HAL_UART_Transmit(&huart2, g_fix_data, 1, 0XFF);//发送完成函数
    while(__HAL_UART_GET_FLAG(&huart2, USART_FLAG_TC) == RESET)
    {
    }
    osDelay(100);
    strx=strstr((char*)usart2_rx_buf,(char*)"OK");//是否正确发送
    while(strx==NULL)
    {
        strx=strstr((char*)usart2_rx_buf,(char*)"OK");//是否正确发送
        osDelay(10);
    }
		HAL_UART_Receive_DMA(&huart2, usart2_rx_buf, USART_MAX_DATA_LEN);
    osDelay(100);
    Clear_Buffer();
    printf("AT+QISEND=0,0\r\n");
    osDelay(200);
    strx=strstr((char*)usart2_rx_buf,(char*)"+QISEND:");//发送剩余字节数据
    while(untildata)
    {
				printf("AT+QISEND=0,0\r\n");
				osDelay(200);
				strx=strstr((char*)usart2_rx_buf,(char*)"+QISEND:");//发送剩余字节数据
				strx=strstr((char*)strx,(char*)",");//获取第一个
				strx=strstr((char*)(strx+1),(char*)",");//获取第二个
				untildata=*(strx+1)-0x30;
				Clear_Buffer();
    }
}
